--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ClavertvApp</title>
-    <base href="clevertv">
+    <base href="https://mrmonterrosa.github.io/clevertv/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.cc2e71f6088ebbe99cbd.css"></head>
